# my-tree-sitter-odin

./: .dir-locals.el  .gitignore  CMakeLists.txt  Cargo.toml  Makefile  Package.swift  TODO  binding.gyp  expressions  go.mod  grammar.js  package.json  pyproject.toml  setup.py  tree-sitter.json
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_odin/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
src/: grammar.json  node-types.json  scanner.c
src/hash/: odin.c  word-list
test/ast-compare/: build.sh  fixed-od.ast  fixed-regen.sh  fixed-ts.ast  gen_elements.sh  generated.odin  main.odin  run.sh
test/corpus/: argh.txt  attributes.txt  basic.txt  comment.txt  procedures.txt  snippet.txt
